tests/errors/test_27.x
// Address of operand only applicable to variables

fn main() -> void {

    let x: i64* = &2;

}